--- a/get-started-examples/features-examples/features/pom.xml
+++ b/get-started-examples/features-examples/features/pom.xml
@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>org.fusesource.example</groupId> 
-    <artifactId>get-started</artifactId>
+    <artifactId>get-started-examples</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     
